metadata/objects/Heroku_App__c.object
<CustomObject>
    <fields>
        <fullName>Framework__c</fullName>
        <label>Framework</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heroku_App_Id__c</fullName>
        <externalId>true</externalId>
        <label>Heroku App Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack__c</fullName>
        <label>Stack</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Url__c</fullName>
        <label>Web Url</label>
        <type>Url</type>
    </fields>
    <label>Heroku App</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stack__c</columns>
        <columns>Framework__c</columns>
        <columns>Region__c</columns>
        <columns>Web_Url__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Heroku App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Heroku Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>